# serverless-bank

./: .gitignore  README.md  env.json  samconfig.toml  template.yaml
cloudformation/: dynamodb.yaml  functions.yaml  policies.yaml
cloudformation/openapi/: openapi.yml
execute_payments/: Cargo.toml
execute_payments/src/: main.rs
execute_payments/src/entrypoints/: execute_payment.rs  mod.rs
functions/add_credits/: Cargo.toml
functions/add_credits/src/: main.rs
functions/add_credits/src/adapters/repositories/: dyn_accounts_repository.rs  mod.rs  user_credits_repository.rs
functions/add_credits/src/domain/: mod.rs
functions/add_credits/src/domain/command_handlers/: add_credits_cmd_handler.rs  mod.rs
functions/add_credits/src/domain/commands/: add_credits_cmd.rs  mod.rs
functions/add_credits/src/domain/errors/: base_error.rs  command_handler_error.rs  entrypoint_error.rs  mod.rs  repository_error.rs
functions/add_credits/src/domain/model/: event_type.rs  transaction.rs
functions/add_credits/src/domain/ports/: accounts_repository.rs  mod.rs  user_credits_repository.rs
functions/add_credits/src/entrypoints/: add_credits.rs  mod.rs
functions/create_user/: Cargo.toml
functions/create_user/src/: main.rs
functions/create_user/src/adapters/repositories/: dyn_accounts_repository.rs  dyn_user_repository.rs  mod.rs  user_credits_repository.rs  user_repository.rs
functions/create_user/src/domain/command_handlers/: create_user_cmd_handler.rs  mod.rs
functions/create_user/src/domain/commands/: create_user_cmd.rs  mod.rs
functions/create_user/src/domain/errors/: api_error.rs  command_handler_error.rs  entrypoint_error.rs  mod.rs
functions/create_user/src/domain/model/: account.rs  user.rs
functions/create_user/src/domain/ports/: accounts_repository.rs  mod.rs  user_credits_repository.rs  user_repository.rs
functions/create_user/src/entrypoints/: create_user.rs
functions/execute_payments/: Cargo.toml
functions/execute_payments/src/: main.rs
functions/request_payments/: Cargo.toml
functions/request_payments/src/: main.rs
functions/request_payments/src/adapters/repositories/: dyn_transaction_repository.rs  mod.rs  transaction_repository.rs
functions/request_payments/src/domain/: mod.rs
functions/request_payments/src/domain/command_handlers/: mod.rs  request_payment_cmd_handler.rs
functions/request_payments/src/domain/commands/: mod.rs  request_payment_cmd.rs
functions/request_payments/src/domain/errors/: mod.rs
functions/request_payments/src/domain/model/: mod.rs  transaction.rs
functions/request_payments/src/domain/ports/: event_repository.rs
functions/request_payments/src/entrypoints/: mod.rs  request_payment.rs
openapi/: openapi.yml
statemachine/: post_transaction.json
(+19 files in other folders)
