[package]
name = "add_credits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
aws-config = "1.5.3"
aws-sdk-dynamodb = "1.36.0"
dotenv = "0.15.0"
lambda_http = "0.12.0"
serde = "1.0.136"
serde_json = "1.0.118"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
uuid = { version = "1.9.1", features = ["v4"] }


[package.metadata.lambda.build]
artifact_executable_name = "add_credits"
