[package]
name = "add_credits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.39.1"
aws_lambda_events = "0.15.1"
dotenv = "0.15.0"
uuid = { version = "1.10.0", features = ["v4"] }
lambda_runtime = "0.13.0"
serde = "1.0.204"
serde_json = "1.0.122"
serde_dynamo = { version = "4" }
tokio = { version = "1.39.2", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["default", "json"] }


[package.metadata.lambda.build]
artifact_executable_name = "add_credits"
