[package]
name = "request_payments"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.3"
aws-sdk-dynamodb = "1.36.0"
dotenv = "0.15.0"

lambda_runtime = "0.6.0"
serde = "1.0.136"
serde_json = "1.0.118"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
uuid = { version = "1.9.1", features = ["v4"] }


[package.metadata.lambda.build]
artifact_executable_name = "request_payments"